<resources>
    <string name="app_name">GymDevon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_bicep">Bicep Workouts</string>
    <string name="menu_tricep">Tricep Workouts</string>
    <string name="menu_shoulder">Shoulder Workouts</string>
    <string name="menu_traps">Traps Workouts</string>
    <string name="menu_forearm">Forearm Workouts</string>
    <string name="menu_legs">Leg Workouts</string>
    <string name="menu_plans">Workout Plans</string>
    <string name="menu_create">Create a Workout Plan</string>
    <string name="menu_rest">Rest Timer</string>
    <string name="menu_information">More Information</string>
    <string name="menu_bug">Report a Bug</string>
    <string name="gym_devon" translatable="false">Gym Devon</string>
    <string name="report_title">Report a Bug</string>
    <string name="report_button">Report a Bug to the Developers</string>
    <string name="info_title">More Information</string>
    <string name="location_button">Where we are located</string>
    <string name="website_button">Our Website</string>
    <string name="call_button">Call us now!</string>
    <string name="chest_menu">Chest Workouts</string>
    <string name="back_menu">Back Workouts</string>
    <string name="start_a_home_gym_button">Start a home gym!</string>
    <string name="home_gym_title">Equipment You Need to Start a Home Gym</string>
    <string name="settings_nav">Settings</string>
    <string name="credit_nav">Credit</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="credits_title" translatable="false">Credits</string>
    <string name="back_workouts">Back Workouts</string>
    <string name="bicep_workouts">Bicep Workouts</string>
    <string name="chest_workouts">Chest Workouts</string>
    <string name="forearm_workouts">Forearm Workouts</string>
    <string name="leg_workouts">Leg Workouts</string>
    <string name="shoulder_workouts">Shoulder Workouts</string>
    <string name="traps_workouts">Traps Workouts</string>
    <string name="triceps_workouts">Triceps Workouts</string>
    <string name="home_title" translatable="false">Gym Devon</string>
    <string name="home_content1">Gym Devon is a Gym established in August 2021.
        We are committed to having the best staff and equipment available for our growing community.</string>
    <string name="plans_content">Our app provides training plans.</string>
    <string name="home_gym_content">We also provide a list of equipment needed to start a home gym.</string>
    <string name="home_content2">The goal of our application is to keep you motivated with the proper tools to keep working out,
        inside and out of the gym. You are able to contact our staff and request an appointment with a trainer,
    theres also plans and tutorials to help beginners.</string>
</resources>