<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Indigo_Dye"
    tools:context=".PlansRecyclerView.PlansFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/plansRecyclerView"
        android:layout_weight="1"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/back_workouts" />

        <Button
            android:id="@+id/bicepButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/bicep_workouts" />

        <Button
            android:id="@+id/chestButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/chest_workouts" />

        <Button
            android:id="@+id/forearmButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/forearm_workouts" />

        <Button
            android:id="@+id/legButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/leg_workouts" />

        <Button
            android:id="@+id/shoulderButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/shoulder_workouts" />

        <Button
            android:id="@+id/trapsButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/traps_workouts" />

        <Button
            android:id="@+id/tricepButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue_Munsell"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/triceps_workouts" />

    </GridLayout>
</LinearLayout>