<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Indigo_Dye"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="@dimen/title_text"
        android:textColor="@color/Alice_Blue"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_content1"
        android:textColor="@color/Alice_Blue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/plans_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plans_content"
        android:textColor="@color/Blue_Munsell"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/home_gym_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_gym_content"
        android:textColor="@color/Blue_Munsell"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/home_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_content2"
        android:textColor="@color/Alice_Blue"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

</LinearLayout>