<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="@color/Indigo_Dye"
    tools:context=".InformationFragment">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:textAlignment="center"
        android:textSize="@dimen/title_text"
        android:padding="28dp"
        android:textColor="@color/Alice_Blue"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

    <Button
        android:id="@+id/location_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/location_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/Blue_Munsell"
        android:padding="10dp"/>

    <Button
        android:id="@+id/website_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/website_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/Blue_Munsell"
        android:padding="10dp"/>

    <Button
        android:id="@+id/phone_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/call_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/Blue_Munsell"
        android:padding="10dp"/>

    <Button
        android:id="@+id/start_home_gym_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/start_a_home_gym_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/Blue_Munsell"
        android:padding="10dp"/>

</LinearLayout>
</LinearLayout>